fix: decrease width, add confirm passw visibility

--- a/src/app/auth/pages/user-register/user-register.component.scss
+++ b/src/app/auth/pages/user-register/user-register.component.scss
@@ -10,15 +10,15 @@
   height: fit-content;
   opacity: 1;
   float: left;
-  padding: 60px 50px 40px 50px;
-  width: 100%;
+  padding: 60px 30px 40px 30px;
+  width: 95%;
   background-color: #bbb2c1;
   border-radius: 10px;
   transform: scale(1);
   -webkit-transform: scale(1);
   -ms-transform: scale(1);
   z-index: 5;
-  max-width: 330px;
+  max-width: 320px;
   color: var(--primary);
   a {
     text-align: center;
